tests/en/errors/empty_if.salam
// EXPECT: E060
func main:
    if true:
    end
end
